Fix header spacing issues

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -6,7 +6,7 @@ html, body {
 
 .main {
   display: grid;
-  grid-template-rows: 12% 88%;
+  grid-template-rows: 10% 90%;
 }
 
 a {
@@ -22,6 +22,7 @@ a {
 
 .top-half {
   display: flex;
+  margin-top: 5%;
 }
 
 
