--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,6 +5,7 @@
     height: 100%;
     justify-content: space-between;
     width: 100%;
+    /* margin-top: 5%; */
   }
   
   .title {
@@ -29,6 +30,11 @@
 
 @media screen and (min-width: 321px) {}
 @media screen and (min-width: 750px) {
+
+  header {
+    margin-top: 5%;
+  }
+  
   .title {
     font-size: 50px;
   }
